Fixed a Spacing Error with the top margin of the MOTD

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ nav {
 }
 
 .motd {
-	margin-top: 16px;
+	margin-top: 15px;
 }
 
 .nav-img {
